Bug 307768 - Wrong icon for 'Missing brush' in preset docker
Summary: Wrong icon for 'Missing brush' in preset docker
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-03 12:04 UTC by Tom Hall
Modified: 2012-10-31 11:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Hall 2012-10-03 12:04:26 UTC
Currently, if a preset requires a brush that doesn't exist, the preset docker shows that preset with a small icon in the bottom corner of the thumbnail. I believe the icon in question is called "edit-delete" (usually intended for when the user can delete something by clicking the icon). Depending on the system icon theme, this may be rendered as a red cross, a bin or any number of things that might represent deletion. I suggest replacing this with a custom icon could be:
a) Clearer to a user who hasn't come across it before.
b) Easier to explain in documentation (or on irc or wherever).
If the icon only appears when the required brush is missing, this could be an image of a brush in a 'no sign'.
If the icon can also mean that the preset's settings are missing/invalid, an icon relating to an error might be more appropriate.


Reproducible: Always

Steps to Reproduce:
1. Create a preset that refers to a brush that doesn't exist
2. Look at the preset in the Preset docker.
3. Try several different system icon themes.
Actual Results:  
The preset docker shows the preset marked with an icon that:
a) relates to deletion
b) varies between icon themes

Expected Results:  
The preset docker shows the preset marked with an icon that:
a) depicts something to do with missing brushes
b) is consistent across icon themes (probably by being a custom icon included as part of krita)
Comment 1 Halla Rempt 2012-10-05 08:40:35 UTC
Right, it's in kis_preset_chooser.cpp, line 103. We need to have a new icon that signals that something is broken.
Comment 2 Halla Rempt 2012-10-05 08:47:50 UTC
Git commit 242dbe305dca77e3e5c1c5b08f7bc5a41c176e80 by Boudewijn Rempt.
Committed on 05/10/2012 at 10:44.
Pushed by rempt into branch 'master'.

Use a better icon for broken presets

M  +1    -0    krita/pics/CMakeLists.txt
A  +-    --    krita/pics/broken-preset.png
M  +1    -1    krita/ui/widgets/kis_preset_chooser.cpp

http://commits.kde.org/calligra/242dbe305dca77e3e5c1c5b08f7bc5a41c176e80
Comment 3 Jarosław Staniek 2012-10-31 11:26:32 UTC
Git commit d14263acd4f89ca882a3a941f107202fe0396ff2 by Jaroslaw Staniek, on behalf of Boudewijn Rempt.
Committed on 05/10/2012 at 10:44.
Pushed by staniek into branch 'kexi-altertable-staniek'.

Use a better icon for broken presets

M  +1    -0    krita/pics/CMakeLists.txt
A  +-    --    krita/pics/broken-preset.png
M  +1    -1    krita/ui/widgets/kis_preset_chooser.cpp

http://commits.kde.org/calligra/d14263acd4f89ca882a3a941f107202fe0396ff2