Use a better icon for broken presets

BUG:307768